--- a/pages/15523.html
+++ b/pages/15523.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -680,7 +680,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>A “branched” or “ramified” covering spaces is much like a plain <a class="existingWikiWord" href="/nlab/show/covering+space">covering space</a>, only that over isolated points in the base space – called the <em>branch points</em> or <em>ramification points</em> – sheets of the covering may merge.</p>
+<p>A “branched” or “ramified” covering space is much like a plain <a class="existingWikiWord" href="/nlab/show/covering+space">covering space</a>, only that over isolated points in the base space – called the <em>branch points</em> or <em>ramification points</em> – sheets of the covering may merge.</p>
 
 <p>The archetypical examples are in <a class="existingWikiWord" href="/nlab/show/complex+analysis">complex analysis</a> and here the most archetypical example of all is the <a class="existingWikiWord" href="/nlab/show/graph+of+a+function">graph</a> of (any choice of) the <a class="existingWikiWord" href="/nlab/show/square+root">square root</a> function on the <a class="existingWikiWord" href="/nlab/show/complex+plane">complex plane</a>, which is a <a class="existingWikiWord" href="/nlab/show/double+cover">double cover</a> away from the point at the origin, but including the origin it is a branched double cover with branch point that origin</p>
 
@@ -763,14 +763,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  6, 2019 at 10:55:36.
+  Last revised on January  6, 2019 at 11:15:55.
   See the <a href="https://ncatlab.org/nlab/history/branched cover" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/branched+cover" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/branched+cover/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/branched+cover" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/branched+cover" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/branched+cover" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/branched+cover/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/branched+cover" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/branched+cover" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/branched cover/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
