--- a/pages/17110.html
+++ b/pages/17110.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -562,7 +562,7 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
-<p>On <a class="existingWikiWord" href="/nlab/show/branched+covers">branched covers</a> of 4-manifolds:</p>
+<p>All <a class="existingWikiWord" href="/nlab/show/PL+manifold">PL</a> <a class="existingWikiWord" href="/nlab/show/4-manifolds">4-manifolds</a> are <em>simple</em> <a class="existingWikiWord" href="/nlab/show/branched+covers">branched covers</a> of the <a class="existingWikiWord" href="/nlab/show/4-sphere">4-sphere</a>:</p>
 
 <ul>
 <li id="Piergallini95">
@@ -585,14 +585,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 11, 2018 at 10:13:15.
+  Last revised on January  6, 2019 at 14:37:08.
   See the <a href="https://ncatlab.org/nlab/history/4-manifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/4-manifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/4-manifold/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/4-manifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/4-manifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/4-manifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/4-manifold/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/4-manifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/4-manifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/4-manifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
