--- a/pages/20041.html
+++ b/pages/20041.html
@@ -735,14 +735,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  6, 2019 at 12:08:48.
+  Last revised on January  6, 2019 at 18:36:53.
   See the <a href="https://ncatlab.org/nlab/history/piecewise-linear manifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/piecewise-linear+manifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/piecewise-linear+manifold/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/piecewise-linear+manifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/piecewise-linear+manifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/piecewise-linear+manifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/piecewise-linear+manifold/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/piecewise-linear+manifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/piecewise-linear+manifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/piecewise-linear manifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
