--- a/pages/494.html
+++ b/pages/494.html
@@ -317,7 +317,13 @@ margin-left: 0em;
 
 <h4 id="category_theory">Category theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a></strong></p><h2 id="concepts">Concepts</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a></strong></p>
+
+<h2 id="concepts">Concepts</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/category">category</a></p>
 </li>
@@ -333,7 +339,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Cat">Cat</a></p>
 </li>
-</ul><h2 id="universal_constructions">Universal constructions</h2><ul>
+</ul>
+
+<h2 id="universal_constructions">Universal constructions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/universal+construction">universal construction</a></p>
 
@@ -363,7 +373,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Yoneda+lemma">Yoneda lemma</a></p>
 </li>
@@ -407,7 +421,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/relation+between+type+theory+and+category+theory">relation between type theory and category theory</a></p>
 </li>
-</ul><h2 id="extensions">Extensions</h2><ul>
+</ul>
+
+<h2 id="extensions">Extensions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/sheaf+and+topos+theory">sheaf and topos theory</a></p>
 </li>
@@ -419,13 +437,18 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+category+theory">higher category theory</a></p>
 </li>
-</ul><h2 id="applications">Applications</h2><ul>
+</ul>
+
+<h2 id="applications">Applications</h2>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/applications+of+%28higher%29+category+theory">applications of (higher) category theory</a></li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/category+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -1802,7 +1825,7 @@ margin-left: 0em;
 <p>The history of the idea that adjoint functors formalize aspects of <a class="existingWikiWord" href="/nlab/show/dialectics">dialectics</a> is recounted in</p>
 
 <ul>
-<li id="Lambek82"><a class="existingWikiWord" href="/nlab/show/Joachim+Lambek">Joachim Lambek</a>, <em>The Influence of Heraclitus on Modern Mathematics</em>, In <em>Scientific Philosophy Today: Essays in Honor of Mario Bunge</em>, edited by Joseph Agassi and Robert S Cohen, 111–21. Boston: D. Reidel Publishing Co. (1982)</li>
+<li id="Lambek82"><a class="existingWikiWord" href="/nlab/show/Joachim+Lambek">Joachim Lambek</a>, <em>The Influence of Heraclitus on Modern Mathematics</em>, In <em>Scientific Philosophy Today: Essays in Honor of Mario Bunge</em>, edited by Joseph Agassi and Robert S Cohen, 111–21. Boston: D. Reidel Publishing Co. (1982) (<a href="https://doi.org/10.1007/978-94-009-8462-2_6">doi:10.1007/978-94-009-8462-2_6</a>)</li>
 </ul>
 
 <p>For more on this see at <em><a class="existingWikiWord" href="/nlab/show/adjoint+modality">adjoint modality</a></em>.</p>
@@ -1826,14 +1849,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 22, 2018 at 06:12:37.
+  Last revised on January  7, 2019 at 04:07:52.
   See the <a href="https://ncatlab.org/nlab/history/adjoint functor" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/adjoint+functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/adjoint+functor/84" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(84 revisions)</span> | <a href="/nlab/show/diff/adjoint+functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/adjoint+functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/adjoint+functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/adjoint+functor/85" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(85 revisions)</span> | <a href="/nlab/show/diff/adjoint+functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/adjoint+functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/adjoint functor/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
