--- a/pages/8176.html
+++ b/pages/8176.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/7139/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/7139/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -789,7 +789,7 @@ margin-left: 0em;
 <p>and implementation in <a class="existingWikiWord" href="/nlab/show/Lean">Lean</a> is in</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Floris+van+Doorn">Floris van Doorn</a>, <em>Spectral</em> (<a href="https://github.com/cmu-phil/Spectral">github.com/cmu-phil/Spectral</a>)</li>
+<li><a class="existingWikiWord" href="/nlab/show/Floris+van+Doorn">Floris van Doorn</a>, <a class="existingWikiWord" href="/nlab/show/Egbert+Rijke">Egbert Rijke</a>, <a class="existingWikiWord" href="/nlab/show/Ulrik+Buchholtz">Ulrik Buchholtz</a>, <a class="existingWikiWord" href="/nlab/show/Favonia">Favonia</a>, <a class="existingWikiWord" href="/nlab/show/Steve+Awodey">Steve Awodey</a>, <a class="existingWikiWord" href="/nlab/show/Jeremy+Avigad">Jeremy Avigad</a>, <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>, <a class="existingWikiWord" href="/nlab/show/Jonas+Frey">Jonas Frey</a>, <em>Spectral</em> (<a href="https://github.com/cmu-phil/Spectral">github.com/cmu-phil/Spectral</a>)</li>
 </ul>
 
 <h3 id="in_equivariant_cohomology_2">In equivariant cohomology</h3>
@@ -817,14 +817,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  8, 2019 at 11:18:54.
+  Last revised on January  8, 2019 at 12:05:09.
   See the <a href="https://ncatlab.org/nlab/history/Serre spectral sequence" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Serre+spectral+sequence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Serre+spectral+sequence/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/Serre+spectral+sequence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Serre+spectral+sequence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Serre+spectral+sequence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Serre+spectral+sequence/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/Serre+spectral+sequence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Serre+spectral+sequence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Serre spectral sequence/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
