--- a/pages/10427.html
+++ b/pages/10427.html
@@ -849,7 +849,7 @@ margin-left: 0em;
 </li>
 
 <li id="RSS">
-<p><a class="existingWikiWord" href="/nlab/show/Egbert+Rijke">Egbert Rijke</a>, <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>, <a class="existingWikiWord" href="/nlab/show/Bas+Spitters">Bas Spitters</a>, <em>Modalities in homotopy type theory</em> <a href="https://arxiv.org/abs/1706.07526">arXiv</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Egbert+Rijke">Egbert Rijke</a>, <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>, <a class="existingWikiWord" href="/nlab/show/Bas+Spitters">Bas Spitters</a>, <em>Modalities in homotopy type theory</em> (<a href="https://arxiv.org/abs/1706.07526">arXiv:1706.07526</a>)</p>
 </li>
 
 <li>
@@ -886,14 +886,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  7, 2019 at 16:13:26.
+  Last revised on January  8, 2019 at 13:23:53.
   See the <a href="https://ncatlab.org/nlab/history/modal homotopy type theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/modal+homotopy+type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/modal+homotopy+type+theory/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/modal+homotopy+type+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/modal+homotopy+type+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/modal+homotopy+type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/modal+homotopy+type+theory/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/modal+homotopy+type+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/modal+homotopy+type+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/modal homotopy type theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
