--- a/pages/11468.html
+++ b/pages/11468.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9442/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9442/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -831,13 +831,25 @@ margin-left: 0em;
 <p>The original articles include</p>
 
 <ul>
-<li id="Volovich87">I. V. Volovich, <em>p-Адическое пространство-время и теория струн</em>, ТМФ, 71:3 (1987)<a href="http://www.mathnet.ru/links/704079ec1d28d91ba6eb6d492359b387/tmf4962.pdf">free Rus. pdf</a>; transl. <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-adic space-time and string theory</em>, Theor. Math. Phys. <strong>71</strong>, 574–576 (1987), <a href="http://dx.doi.org/10.1007/BF01017088">eng doi</a>, <a href="http://www.springerlink.com/content/k514t553607324n0/fulltext.pdf">nonfree Eng. pdf</a></li>
+<li>
+<p>Peter Freund, Mark Olson, <em>Non-archimedean strings</em>, Physics Letters B 199,2 (1987) (<a href="https://doi.org/10.1016/0370-2693(87)91356-6">arXiv:10.1016/0370-2693(87)91356-6</a>)</p>
+</li>
+
+<li id="Volovich87">
+<p>I. V. Volovich, <em>p-Адическое пространство-время и теория струн</em>, ТМФ, 71:3 (1987)<a href="http://www.mathnet.ru/links/704079ec1d28d91ba6eb6d492359b387/tmf4962.pdf">free Rus. pdf</a>; transl. <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-adic space-time and string theory</em>, Theor. Math. Phys. <strong>71</strong>, 574–576 (1987), <a href="http://dx.doi.org/10.1007/BF01017088">eng doi</a>, <a href="http://www.springerlink.com/content/k514t553607324n0/fulltext.pdf">nonfree Eng. pdf</a></p>
+</li>
 </ul>
 
 <p>That the ordinary <a class="existingWikiWord" href="/nlab/show/Veneziano+amplitude">Veneziano amplitude</a> is the inverse product of all its <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-adic versions is due to</p>
 
 <ul>
 <li id="FreundWitten87"><a class="existingWikiWord" href="/nlab/show/Peter+Freund">Peter Freund</a>, <a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em>Adelic string amplitudes</em>, Phys. Lett. B 199, 191 (1987). (<a href="http://adsabs.harvard.edu/abs/1987PhLB..199..191F">web record</a>)</li>
+</ul>
+
+<p>also</p>
+
+<ul>
+<li>Lee Brekke, <a class="existingWikiWord" href="/nlab/show/Peter+Freund">Peter Freund</a>, Mark Olson, <a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em>Non archimedean string dynamics</em>, Nucl. Phys. B302, 3 (1988) (<a href="https://doi.org/10.1016/0550-3213(88)90207-6">arXiv:10.1016/0550-3213(88)90207-6</a>)</li>
 </ul>
 
 <p>A detailed discussion of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-adic open <a class="existingWikiWord" href="/nlab/show/string+scattering+amplitudes">string scattering amplitudes</a> is in</p>
@@ -849,7 +861,13 @@ margin-left: 0em;
 <p>A review of this is in</p>
 
 <ul>
-<li>L. Brekke and <a class="existingWikiWord" href="/nlab/show/Peter+Freund">Peter Freund</a>, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-Adic numbers in physics</em>, Phys. Rep. 233, 1 (1993) (<a href="http://adsabs.harvard.edu/abs/1993PhR...233....1B">web record</a>)</li>
+<li>Lee Brekke and <a class="existingWikiWord" href="/nlab/show/Peter+Freund">Peter Freund</a>, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-Adic numbers in physics</em>, Phys. Rep. 233, 1 (1993) (<a href="http://adsabs.harvard.edu/abs/1993PhR...233....1B">web record</a>)</li>
+</ul>
+
+<p>and with an eye towards <a class="existingWikiWord" href="/nlab/show/AdS-CFT+duality">AdS-CFT duality</a> in</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Peter+Freund">Peter Freund</a>, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-adic Strings Then and Now</em> (<a href="https://arxiv.org/abs/1711.00523">arXiv:1711.00523</a>)</li>
 </ul>
 
 <p>Discussion of <a class="existingWikiWord" href="/nlab/show/tachyon+condensation">tachyon condensation</a> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-adic string theory includes</p>
@@ -875,14 +893,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  8, 2019 at 22:40:36.
+  Last revised on January  8, 2019 at 23:17:09.
   See the <a href="https://ncatlab.org/nlab/history/p-adic string theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/p-adic+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/p-adic+string+theory/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/p-adic+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/p-adic+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/p-adic+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/p-adic+string+theory/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/p-adic+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/p-adic+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/p-adic string theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
