--- a/pages/17780.html
+++ b/pages/17780.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9443/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -520,6 +520,18 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<p>The first examples are due to</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Daniele+Amati">Daniele Amati</a> and C. Klimˇcik, <em>Nonperturbative computation of the Weyl anomaly for a class of nontrivial backgrounds, Phys. Lett. B, 219:443–447, 1989 (<a href="inspirehep.net/record/269390">spire:269390</a>, <a href="https://doi.org/10.1016/0370-2693(89)91092-7">10.1016/0370-2693(89)91092-7</a>)</em></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Gary+Horowitz">Gary Horowitz</a>, Alan R. Steif, <em>Spacetime singularities in string theory</em>, Phys. Rev. Lett. 64, 260 1990 (<a href="https://doi.org/10.1103/PhysRevLett.64.260">doi:10.1103/PhysRevLett.64.260</a>)</p>
+</li>
+</ul>
+
 <p>The terminology was introduced in</p>
 
 <ul>
@@ -551,14 +563,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 28, 2018 at 07:33:14.
+  Last revised on January  9, 2019 at 00:58:23.
   See the <a href="https://ncatlab.org/nlab/history/universal spacetime" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/universal+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/universal+spacetime/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/universal+spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/universal+spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/universal+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/universal+spacetime/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/universal+spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/universal+spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/universal spacetime/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
